force-app/main/default/objects/Service_Request__c/fields/Issues__c.field-meta.xml
<CustomField>
    <fullName>Issues__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issues</label>
    <referenceTo>Issue_Logs__c</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>