force-app/main/default/objects/Service_Request__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project where the service request needs to be completed.</description>
    <inlineHelpText>Project where the service request needs to be completed.</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>