force-app/main/default/objects/Service_Request__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Vendor that is doing the work</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>