force-app/main/default/objects/Service_Request__c/fields/Warranty_Item__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty Item</label>
    <referenceTo>Warranty_Item__c</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>